[gd_scene load_steps=7 format=3 uid="uid://rhn7cenybqv"]

[ext_resource type="Script" uid="uid://v66w7qolipf2" path="res://Objects/GameUI/augment_ui.gd" id="1_pnovf"]
[ext_resource type="FontFile" uid="uid://dutr1gb421wvd" path="res://Assets/ThaleahFat.ttf" id="2_swrw7"]
[ext_resource type="AudioStream" uid="uid://bpvauf2yfng88" path="res://Assets/Sfx/Coin1.mp3" id="2_wa8aj"]
[ext_resource type="Texture2D" uid="uid://cbm74sqapcdq6" path="res://Assets/augment_card_enemy_bullet_size.png" id="3_wa8aj"]
[ext_resource type="Texture2D" uid="uid://b5nqeiu40rudj" path="res://Assets/augment_card_player_damage.png" id="4_i63mr"]
[ext_resource type="Texture2D" uid="uid://11eqmd7rdq83" path="res://Assets/augment_card_player_spread_2.png" id="5_chsq5"]

[node name="AugmentUI" type="CanvasLayer"]
script = ExtResource("1_pnovf")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_wa8aj")
volume_db = -6.0

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.419608)

[node name="Augments" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Augments"]
layout_mode = 2

[node name="Label" type="Label" parent="Augments/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("2_swrw7")
theme_override_font_sizes/font_size = 70
text = "Choose an augment"

[node name="HBoxContainer" type="HBoxContainer" parent="Augments/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 50

[node name="Augment_1" type="TextureRect" parent="Augments/VBoxContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("3_wa8aj")

[node name="MarginContainer" type="MarginContainer" parent="Augments/VBoxContainer/HBoxContainer/Augment_1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 250

[node name="Label" type="RichTextLabel" parent="Augments/VBoxContainer/HBoxContainer/Augment_1/MarginContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/outline_size = 15
theme_override_fonts/normal_font = ExtResource("2_swrw7")
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "Reduce enemy
bullet size

10% -> 20%"
autowrap_mode = 0
horizontal_alignment = 1

[node name="Augment_2" type="TextureRect" parent="Augments/VBoxContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("4_i63mr")

[node name="MarginContainer" type="MarginContainer" parent="Augments/VBoxContainer/HBoxContainer/Augment_2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 250

[node name="Label" type="RichTextLabel" parent="Augments/VBoxContainer/HBoxContainer/Augment_2/MarginContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/outline_size = 15
theme_override_fonts/normal_font = ExtResource("2_swrw7")
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "Reduce enemy
bullet size

10% -> 20%"
autowrap_mode = 0
horizontal_alignment = 1

[node name="Augment_3" type="TextureRect" parent="Augments/VBoxContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("5_chsq5")

[node name="MarginContainer" type="MarginContainer" parent="Augments/VBoxContainer/HBoxContainer/Augment_3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 250

[node name="Label" type="RichTextLabel" parent="Augments/VBoxContainer/HBoxContainer/Augment_3/MarginContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/outline_size = 15
theme_override_fonts/normal_font = ExtResource("2_swrw7")
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "Reduce enemy
bullet size

10% -> 20%"
autowrap_mode = 0
horizontal_alignment = 1
